[package]
name = "pixiv_rs"
version = "0.1.0"
edition = "2021"
description = "Pixiv client writen in Rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart"] }
tokio = { version = "1.0", optional = true, features = ["full"] }
async-std = { version = "1.12", optional = true }
smol = { version = "1.3", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
urlencoding = "2.1"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "reqwest/default-tls"]
async-std-runtime = ["async-std", "reqwest/default-tls"]
smol-runtime = ["smol", "reqwest/default-tls"]
